5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1709_3061.log
== TEST (2019-05-02 11:08:23) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE")
	print("DROGON")
	eq = (b/150)
	print(eq)
-- ERROR:
File "XXXX", line 5
    elif (a=="TERRESTRE")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:33) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = (b/150)
	print(eq)
-- ERROR:
File "XXXX", line 5
    elif (a=="TERRESTRE")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:09:23) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = int(b/150)
	print(eq)
-- ERROR:
File "XXXX", line 5
    elif (a=="TERRESTRE")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:15) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = int(b//150)
	print(eq)
-- ERROR:
File "XXXX", line 5
    elif (a=="TERRESTRE")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:23) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = int(b//150)
	print(eq)
-- ERROR:
File "XXXX", line 5
    elif (a=="TERRESTRE")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:16) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = int(b//150)
	print(eq)
elif (a=="AEREO"):
	print("RHAEGAL")
	eq= int(b/30)
	print(eq)
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:13:44) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = (int(b/150) +1)
	print(eq)
elif (a=="AEREO"):
	print("RHAEGAL")
	eq= (int(b/30) +1) 
	print(eq)
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:44) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = (int(b/150) +1)
	print(eq)
elif (a=="AEREO"):
	print("RHAEGAL")
	eq= (int(b/30) +1) 
	print(eq)
elif (a=="MARITIMO"):
	print("VISERION")
	eq = (int(b/40)+1)
	print(eq)
	
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:54) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = (int(b/150) +1)
	print(eq)
elif (a=="AEREO"):
	print("RHAEGAL")
	eq= (int(b/30) +1) 
	print(eq)
elif (a=="MARITIMO"):
	print("VISERION")
	eq = (int(b/40)+1)
	print(eq)
	
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:05) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = (int(b/150) +1)
	print(eq)
elif (a=="AEREO"):
	print("RHAEGAL")
	eq= (int(b/30) +1) 
	print(eq)
elif (a=="MARITIMO"):
	print("VISERION")
	eq = (int(b/40)+1)
	print(eq)
	
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:16:16) 
-- CODE:
a = input("Tipo de ataque:").upper()
b = int(input("Quantidade de unidades:"))
if (b<=0):
	print("Entrada invalida")
elif (a=="TERRESTRE"):
	print("DROGON")
	eq = (int(b/150) +1)
	print(eq)
elif (a=="AEREO"):
	print("RHAEGAL")
	eq= (int(b/30) +1) 
	print(eq)
elif (a=="MARITIMO"):
	print("VISERION")
	eq = (int(b/40)+1)
	print(eq)
	
-- EXECUTION TIME:
0.17211
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
